--- a/EV range prediction.ipynb
+++ b/EV range prediction.ipynb
@@ -2870,6 +2870,14 @@
     "    print('\\n')\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48982a7e",
+   "metadata": {},
+   "source": [
+    "From the above mertics we can see that the performance of Random Forest Regressor has increased. The adjusted R2 score has gone up and overfitting has decreased from 0.09 to 0.07.\n"
+   ]
   }
  ],
  "metadata": {
